# goldenmcp

./: .env.example  .gitignore  .gitmodules  README.md  project.yaml  pyproject.toml  skills-lock.json
.cursor/rules/: commit-often.mdc  git-worktree-workflow.mdc  keep-plan-files.mdc  real-code-only.mdc  run-before-claiming-done.mdc  tdd-required.mdc
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
agent-plans/: 2026-06-12-goldenmcp-eval-marketplace.md  2026-06-13-landing-page.md
apps/web/: .env.local.example  load-web-env.cjs  next.config.js  package-lock.json  package.json  playwright.config.ts  vercel.json
contracts/mcp-registry/: foundry.toml
demo/: README.md  lookup_agent.py  run_demo.sh
docs/: GITHUB_ISSUES.md  architecture.md  eval-runner-host.md  registering-mcps.md  scoring.md
docs/plans/: 2026-06-13-do-eval-runner-terraform.md  2026-06-13-landing-key-components.md  2026-06-13-vercel-deploy.md  2026-06-13-web-concierge-agent.md
docs/reviews/: 2026-06-13-do-staging-cre-handoff.md  _review_bundle.md  plan-issues-review-2026-06-12.md
scripts/: cai_judge_and_publish.py  claude_review_plan_issues.sh  create_github_issues.sh  demo-status.py  deploy_registry.sh  post_eval_walrus.py  provision-cre-trigger-droplet.sh  read-arc-scores.py  read-walrus-manifest.py  register-mcps.sh  register_mcps.py  run-cre-trigger.sh  run-pairs.sh  run_eval.sh  setup_eval_env.sh  sync-eval-runner-dns.sh  sync-eval-runner-secrets.sh  terraform-apply-eval-runner.sh  terraform-eval-runner-info.sh  test-cai-attestation.sh  verify_walrus.sh
(+184 files in other folders)
