[project]
name = "goldenmcp"
version = "0.1.0"
description = "Web3 MCP evaluation marketplace"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
    "packages/inspect-web3",
    "packages/walrus-client",
    "packages/marketplace-mcp",
    "packages/identity",
    "packages/eval-runner",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
pythonpath = ["packages"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
